--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
 
 
 <div class="photo_gallery">
-  <div class="box-1"><img src="./images/product-1.jpg" alt><p>Endless Possibilities</p></div>
-  <div class="box-2"><img src="./images/product-2.jpg" alt><p>Sets</p></div>
-  <div class="box-3"><img src="./images/product-3.jpg" alt><p>Textures</p></div>
+  <div class="box-1"><img class="box" src="./images/product-1.jpg" alt><p>Endless Possibilities</p></div>
+  <div class="box-2"><img class="box" src="./images/product-2.jpg" alt><p>Sets</p></div>
+  <div class="box-3"><img class="box" src="./images/product-3.jpg" alt><p>Textures</p></div>
 </div>
 
 
   <div class="bottom-row">
-   <div class="box-4"><img src="./images/product-4.jpg" alt><p>Tea Time</p></div>
-   <div class="box-5"><img src="./images/product-5.jpg" alt><p>Jars and Containers</p></div>
-   <div class="box-6"><img src="./images/product-6.jpg" alt><p>Wasabi and Saki</p></div>
-   <div class="box-7"><img src="./images/product-7.jpg" alt><p>Sippin' on Sunshine</p></div>
+   <div class="box-4"><img class="box-4" src="./images/product-4.jpg" alt><p>Tea Time</p></div>
+   <div class="box-5"><img class="box-5" src="./images/product-5.jpg" alt><p>Jars and Containers</p></div>
+   <div class="box-6"><img class="box-6" src="./images/product-6.jpg" alt><p>Wasabi and Saki</p></div>
+   <div class="box-7"><img class="box-7" src="./images/product-7.jpg" alt><p>Sippin' on Sunshine</p></div>
   </div>
 
 <div>
